<resources>
    <string name="app_name">RS Wallpaper</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="trending">Trending</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landscape">Landscape</string>
    <string name="purple_lighting">Purple lighting</string>
    <string name="category_list">Category List</string>
    <string name="nature">Nature</string>
    <string name="trending_post">Trending wallpaper</string>
    <string name="report_copyright">Report Copyright</string>
    <string name="view">View</string>
    <string name="size">Size</string>
    <string name="resolution">Resolution</string>
    <string name="uploaded_by">Uploaded By</string>
    <string name="followers">Followers</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="profile">Profile</string>
    <string name="reward">Reward</string>
    <string name="gifs">GIFs</string>
    <string name="live_wallpaper">Live Wallpaper</string>
    <string name="settings">Settings</string>
    <string name="app_info">App Info</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customize_now">Customize now</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="app_version_1_0_0_rs_wallpaper">App Version : 1.0.0 RS Wallpaper</string>
    <string name="todo">TODO</string>
    <string name="following">Following</string>
    <string name="upload_wallpaper">Upload Wallpaper</string>
    <string name="upload_photo">Upload photo</string>
    <string name="name">Name</string>
    <string name="select_category">Select Category</string>
    <string name="tag">Tag</string>
    <string name="about">About</string>
    <string name="upload_now">Upload now</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>

    <string name="facebook_app_id">553960883114258</string>
    <string name="fb_login_protocol_scheme">fb553960883114258</string>
    <string name="facebook_client_token">56789</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="reword_ad_unit_id">"ca-app-pub-3940256099942544/5224354917"</string>
    <string name="banner_ad_unit_id">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="no_image_upload_by_you">No wallpaper upload by you</string>
    <string name="search_wallpaper">Search Wallpaper</string>
    <string name="no_wallpaper_found">No wallpaper found</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="admin">Admin</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="coming_soon">Coming soon</string>
    <string name="crop_wallpaper">Crop Wallpaper</string>

</resources>