<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_dialog"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="12dp"
    android:paddingRight="20dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/theme_color"
        android:textFontWeight="600"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Do you want to log out?"
        android:textColor="@color/textColor"
        android:textSize="12sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_yes"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_no"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/btn_yes"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textSize="16sp" />

    </RelativeLayout>


</LinearLayout>