<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".view.fragment.sideNavigation.UserPhotoViewFragment">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/demo_image" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_back" />

        <com.airbnb.lottie.LottieAnimationView
            android:visibility="gone"
            android:id="@+id/loading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/rsfinal" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/detailsView_layout"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnSetWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/photo_text_background1"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/set_wallpaper"
                android:textColor="@color/background_color"
                android:textFontWeight="600"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnDownload"
                app:layout_constraintEnd_toStartOf="@+id/btnDownload"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnDownload" />


            <ImageView
                android:id="@+id/btnDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:src="@drawable/ic_btn_download"
                app:layout_constraintBottom_toBottomOf="@+id/btnCrop"
                app:layout_constraintEnd_toStartOf="@+id/btnCrop"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSetWallpaper"
                app:layout_constraintTop_toTopOf="@+id/btnCrop" />


            <ImageView
                android:id="@+id/btnCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_btn_crop"
                app:layout_constraintBottom_toBottomOf="@+id/btnShare"
                app:layout_constraintEnd_toStartOf="@+id/btnShare"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDownload"
                app:layout_constraintTop_toTopOf="@+id/btnShare" />


            <ImageView
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_btn_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnCrop"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/detailsView_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/photo_details_background"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/btnArrow"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow_up" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/detailsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/photo_text_background1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/viewCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/photo_text_background1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/downloadCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/photo_text_background1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/sizeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100 KB"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/photo_text_background1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/resolutionCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1200x640"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resolution"
                            android:textColor="@color/background_color"
                            android:textFontWeight="600"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
